--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,14 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+
+/My project (1)/[Ll]ibrary/
+/My project (1)/[Tt]emp/
+/My project (1)/[Oo]bj/
+/My project (1)/[Bb]uild/
+/My project (1)/[Bb]uilds/
+/My project (1)/[Ll]ogs/
+/My project (1)/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
